# ic-http

./: Cargo.toml  LICENSE  README.md  test.md
examples/example_server/: Cargo.toml  README.md
examples/example_server/src/: lib.rs
examples/example_server/src/handlers/: mod.rs  ping.rs
examples/todo_server/: Cargo.toml  README.md  canister_ids.json  dfx.json  http_server.did
examples/todo_server/src/: lib.rs
examples/todo_server/src/handlers/: hello.rs  mod.rs  ping.rs  test.rs
ic-http/: Cargo.toml  README.md
ic-http-core/: Cargo.toml  README.md  dev-dependencies.txt
ic-http-core/src/: lib.rs  router.rs  server.rs  types.rs
ic-http-core/src/tests/: router.rs  server.rs
ic-http/src/: lib.rs  server.rs  types.rs
ic-http/src/tests/: server.rs
