[package]
name = "ic-http"
version = "0.1.0"
edition = "2021"
authors = ["Long Tran <tranbaolong14@gmail.com>"]
description = "A library with built-in documentation for common operations"

[dependencies]
ic-http-certification = "3.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
