[package]
name = "ic-http"
version = "0.1.0"
edition = "2021"
authors = ["Long Tran <tranbaolong14@gmail.com>"]
description = "A library with built-in documentation for common operations"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0"
regex = "1.5"
ic-http-certification = "3.0.3"
ic-http-types = "0.1.0"
matchit = "0.8.6"
ic-cdk = "0.17.2"

[dev-dependencies]
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
