[package]
name = "ic-http"
version = "0.1.0"
edition = "2021"
authors = ["Long Tran <tranbaolong14@gmail.com>"]
description = "A lightweight HTTP server library designed for Internet Computer (IC) canisters"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0"
regex = "1.5"
ic-http-certification = "3.0.3"
ic-http-types = "0.1.0"
matchit = "0.8.6"
futures = "0.3"
ic-cdk = "0.18"
async-trait = "0.1.88"
async_fn_traits = "0.1.1"

[dev-dependencies]
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
