[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-http = {path = "../../ic-http"}
ic-http-certification = "3.0.3"
ic-cdk = "0.17.2"
matchit = "0.8.6"
serde_json = "1.0.140"
futures = "0.3.31"
async-trait = "0.1.88"
